--- a/REWORK/src/stylesheet/index-ui/index.css
+++ b/REWORK/src/stylesheet/index-ui/index.css
@@ -113,6 +113,7 @@ html body .medium-form, html body .big-form {
   border-radius: 5px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  font-size: 14px;
 }
 html body .medium-form:hover, html body .big-form:hover {
   background-color: #ffffff;
@@ -268,7 +269,7 @@ html body main form #login-data input {
   margin-top: -8px;
 }
 html body main form #login-data #password {
-  margin-left: 39px;
+  margin-left: 30px;
 }
 html body main form #login-data #password #togglePW {
   width: 12px;
