--- a/REWORK/src/stylesheet/index-ui/index.css
+++ b/REWORK/src/stylesheet/index-ui/index.css
@@ -3,7 +3,8 @@
   --main-color: #F9F9F9;
   --border-color: #DFDFDF;
   --text-color: #101113;
-  --hover-color: #DFDFDF:
+  --active-color: #cecece;
+  --blue: #005FB8;
   --img-size: 20px;
   --font-size: 14px;
 }
@@ -124,13 +125,13 @@ html body .medium-form, html body .big-form {
 }
 html body .medium-form:hover, html body .big-form:hover {
   background-color: #ffffff;
-  border-bottom: 1.5px solid #005FB8;
+  border-bottom: 1.5px solid var(--blue);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body .medium-form:focus, html body .big-form:focus {
   background-color: #ffffff;
-  border-bottom: 1.5px solid #005FB8;
+  border-bottom: 1.5px solid var(--blue);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
@@ -172,7 +173,7 @@ html body header #drag-region #window-controls {
 }
 html body header #drag-region #window-controls .button {
   width: 46px;
-  height: 35px;
+  height: 32px;
   border: none;
 }
 html body header #drag-region #window-controls .button .icon {
@@ -201,37 +202,50 @@ html body nav #side-bar {
 html body nav #side-bar .active {
   background-color: var(--border-color);
 }
+html body nav #side-bar .active .line {
+  width: 3px;
+  height: 16px;
+  border-radius: 35%;
+  background-color: var(--blue);
+}
+html body nav #side-bar #upper-content a {
+  margin-left: 5px;
+  margin-right: 5px;
+  border-radius: 5px;
+}
 html body nav #side-bar a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding-top: 10px;
-  margin-left: 10px;
   padding-bottom: 10px;
-  margin-right: 5px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  border-radius: 5px;
 }
 html body nav #side-bar a:hover {
   background-color: var(--border-color);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+html body nav #side-bar a:active {
+  background-color: var(--active-color);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body nav #side-bar a img {
+  padding-left: 10px;
+}
 html body nav #side-bar a p {
   position: absolute;
   margin-top: 3px;
   margin-left: 60px;
 }
-html body nav #side-bar a img {
-  padding-left: 15px;
-}
 html body nav #side-bar footer #wifi {
   position: absolute;
-  bottom: 105px;
+  bottom: 85px;
   left: 0px;
   width: 100%;
-  height: 50px;
+  height: 30px;
   color: #31aa31;
 }
 html body nav #side-bar footer #settings {
@@ -239,7 +253,7 @@ html body nav #side-bar footer #settings {
   bottom: 35px;
   left: 0px;
   width: 100%;
-  height: 50px;
+  height: 30px;
   border-top: 1px solid #DFDFDF;
 }
 html body main {
@@ -288,7 +302,6 @@ html body main form #login-data #password #togglePW {
   width: 12px;
   height: auto;
   cursor: pointer;
-  background: url("/src/img/icons/eye.png");
 }
 html body main form #login-data #password #toggle {
   display: none;
@@ -414,7 +427,7 @@ html body main form #start-stop #start-btn {
   position: relative;
   margin-right: 30px;
   color: #fff;
-  background: #005FB8;
+  background: var(--blue);
   border: 1px solid transparent;
   border-radius: 5px;
   background-clip: padding-box;
@@ -481,7 +494,7 @@ html body #legal-note {
   z-index: 5;
   bottom: 30px;
   right: 60px;
-  color: #032031;
+  color: #001224;
   font-size: 20px;
 }
 /*# sourceMappingURL=index.css.map */
