--- a/REWORK/src/stylesheet/index-ui/index.scss
+++ b/REWORK/src/stylesheet/index-ui/index.scss
@@ -3,7 +3,8 @@
   --main-color: #F9F9F9;
   --border-color: #DFDFDF;
   --text-color: #101113;
-  --hover-color: #DFDFDF:
+  --active-color: #cecece;
+  --blue: #005FB8;
 
   --img-size: 20px;
   --font-size: 14px;
@@ -98,12 +99,12 @@ html {
             font-size: 14px;
             &:hover {
                 background-color: #ffffff;
-                border-bottom: 1.5px solid #005FB8;
+                border-bottom: 1.5px solid var(--blue);
                 transition: .2s;
             }
             &:focus {
                 background-color: #ffffff;
-                border-bottom: 1.5px solid #005FB8;
+                border-bottom: 1.5px solid var(--blue);
                 transition: .2s;
             }
         }
@@ -145,7 +146,7 @@ html {
                 right: 0;
                 .button {
                   width: 46px;
-                  height: 35px;
+                  height: 32px;
                   border: none;
                   .icon {
                     width: 10px;
@@ -175,36 +176,48 @@ html {
               font-size: var(--font-size);
               .active {
                 background-color: var(--border-color);
+                .line {
+                    width: 3px;
+                    height: 16px;
+                    border-radius: 35%;
+                    background-color: var(--blue);
+                }
+              }
+              #upper-content a {
+                margin-left: 5px;
+                margin-right: 5px;
+                border-radius: 5px;
               }
               a {
                 display: flex;
                 padding-top: 10px;
-                margin-left: 10px;
                 padding-bottom: 10px;
-                margin-right: 5px;
                 transition: .2s;
-                border-radius: 5px;
                 &:hover {
                     background-color: var(--border-color);
                     transition: .2s;
+                }
+                &:active {
+                    background-color: var(--active-color);
+                    transition: .2s;
+                }
+                img {
+                    padding-left: 10px;
                 }
                 p {
                     position: absolute;
                     margin-top: 3px;
                     margin-left: 60px;
                 }
-                img {
-                    padding-left: 15px;
-                }
               }
 
               footer {
                 #wifi {
                   position: absolute;
-                  bottom: 105px;
+                  bottom: 85px;
                   left: 0px;
                   width: 100%;
-                  height: 50px;
+                  height: 30px;
                   color: rgb(49, 170, 49);
                 } 
                 #settings {
@@ -212,7 +225,7 @@ html {
                   bottom: 35px;
                   left: 0px;
                   width: 100%;
-                  height: 50px;
+                  height: 30px;
                   border-top: 1px solid #DFDFDF;
                 }
               }
@@ -256,7 +269,6 @@ html {
                             width: 12px;
                             height: auto;
                             cursor: pointer;
-                            background: url('/src/img/icons/eye.png');
                         }
                         #toggle {
                             display: none;
@@ -342,7 +354,7 @@ html {
                         position: relative;
                         margin-right: 30px;
                         color: #fff;
-                        background: #005FB8;
+                        background: var(--blue);
                         border: 1px solid transparent;
                         border-radius: 5px;
                         background-clip: padding-box;
@@ -400,7 +412,7 @@ html {
             z-index: 5;
             bottom: 30px;
             right: 60px;
-            color: rgb(3, 32, 49);
+            color: #001224;
             font-size: 20px;
         }
     }
