--- a/REWORK/src/stylesheet/index-ui/index.css
+++ b/REWORK/src/stylesheet/index-ui/index.css
@@ -148,6 +148,7 @@ html body header #drag-region {
   top: 0;
   left: 0;
   width: 100%;
+  height: 35px;
   -ms-overflow-style: scrollbar;
   -webkit-app-region: drag;
 }
