--- a/REWORK/src/stylesheet/index-ui/index.scss
+++ b/REWORK/src/stylesheet/index-ui/index.scss
@@ -122,7 +122,8 @@
                 position: absolute;
                 top: 0;
                 left: 0;
-                width: 100%;              
+                width: 100%;         
+                height: 35px;     
                 -ms-overflow-style: scrollbar;
                 -webkit-app-region: drag;
                 #window-title {
